# vizzyix

./: .clang-format  .gitignore  .qmake.conf  AUTHORS  ChangeLog  README  REUSE.toml  meson.build  vizzyix.pro
.reuse/: dep5
eixpb/: eixpb.pro  meson.build  proto_compile.pri  protobuf.pri  readme.txt
includes/: meson.build
includes/HtmlBuilder/: Element.h.license  LICENSE.txt  meson.build  readme.txt
pbtesting/: build-proto  checkpydeps.py  eix.pb.license  eix.proto.html  eix_pb2.py  eix_pb2.py.license  meson.build  test.py
scripts/: eix.ebuild  eix.ebuild.license  meson.build  mkconfig  mkpackage  readme.txt  vizzyix.ebuild  vizzyix.ebuild.license
tests/: meson.build  tests.pro
tests/testcategorytreeitem/: meson.build  testcategorytreeitem.pro  tst_testcategorytreeitem.cpp
tests/testcategorytreemodel/: meson.build  testcategorytreemodel.pro  tst_testcategorytreemodel.cpp
tests/testcombinedpackageinfo/: meson.build  testcombinedpackageinfo.pro  tst_testcombinedpackageinfo.cpp
tests/testpackagereportitem/: meson.build  testpackagereportitem.cpp  testpackagereportitem.pro
tests/testpackagereportmodel/: meson.build  testpackagereportmodel.pro  tst_testpackagereportmodel.cpp
vizzyix/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  applicationdata.cpp  applicationdata.h  categorytreeitem.cpp  categorytreeitem.h  categorytreemodel.cpp  categorytreemodel.h  combinedpackageinfo.cpp  combinedpackageinfo.h  combinedpackagelist.cpp  combinedpackagelist.h  customhtmlelements.h  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  ebuildsyntaxhighlighter.cpp  ebuildsyntaxhighlighter.h  eixprotohelper.cpp  eixprotohelper.h  htmlgenerator.cpp  htmlgenerator.h  localexceptions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  packagereportitem.cpp  packagereportitem.h  packagereportmodel.cpp  packagereportmodel.h  repositoryindex.cpp  repositoryindex.h  resources.qrc  resources.qrc.license  searchboxvalidator.cpp  searchboxvalidator.h  version.h.in  (+1 more)
vizzyix/images/: all-marker.xcf  eyeball.xcf  installed-marker.xcf  installed-system-marker.xcf  installed-world-marker.xcf  installed-world-set-marker.xcf  installed-zombie-marker.xcf  mk-bitmaps  world-only-marker.xcf
