# SPDX-FileCopyrightText: None
# SPDX-License-Identifier: CC0-1.0

# A way to include files into IDE project
custom_target('zz_pbtesting_files',
    input: [
        '__init__.py',
        'build-proto',
        'checkpydeps.py',
        'eix_pb2.py',
        'eix_pb2.py.license',
        'eix.pb',
        'eix.pb.license',
        'eix.proto.html',
        'test.py',
    ],
    output: 'nuffink',
    command: 'ls',
)
