# SPDX-FileCopyrightText: None
# SPDX-License-Identifier: CC0-1.0

# A way to include files into IDE project
custom_target('zz_scripts_files',
    input: [
        'eix.ebuild',
        'mkconfig',
        'readme.txt',
        'vizzyix.ebuild',
        'vizzyix.ebuild.license',
    ],
    output: 'nuffink',
    command: 'ls',
)
