# SPDX-FileCopyrightText: None
# SPDX-License-Identifier: CC0-1.0

# A way to include files into IDE project
custom_target('zz_htmlbuilder_files',
    input: [
        'Document.h',
        'Element.h',
        'HTML.h',
        'LICENSE.txt',
        'Document.h.license',
        'Element.h.license',
        'HTML.h.license',
        'LICENSE.txt.license',
        'readme.txt',
    ],
    output: 'nuffink',
    command: 'ls',
)
